update submodule to nugetprovier to my branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "src/Microsoft.PackageManagement.NuGetProvider"]
 	path = src/Microsoft.PackageManagement.NuGetProvider
-	url = https://github.com/oneget/NuGetProvider.git
+	url = https://github.com/bergmeister/NuGetProvider.git
+	branch = netstandard2.0
 
 [submodule "src/Modules/PowerShellGet"]
 	
