--- a/src/Microsoft.PowerShell.PackageManagement/Microsoft.PowerShell.PackageManagement.csproj
+++ b/src/Microsoft.PowerShell.PackageManagement/Microsoft.PowerShell.PackageManagement.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net451;netcoreapp2.1;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net451;netstandard2.0</TargetFrameworks>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <DelaySign>true</DelaySign>
     <AssemblyName>Microsoft.PowerShell.PackageManagement</AssemblyName>
@@ -22,9 +22,6 @@
     <ProjectReference Include="..\Microsoft.PackageManagement\Microsoft.PackageManagement.csproj" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp2.1' ">
-    <PackageReference Include="System.Management.Automation" Version="6.1.1" />
-  </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
     <PackageReference Include="System.Management.Automation" Version="6.0.4" />
     <PackageReference Include="Microsoft.Win32.Registry.AccessControl" Version="4.5.0" />
@@ -59,31 +56,14 @@
     <EmbeddedResource Remove="Resources\Messages.resx" />
   </ItemGroup>
 
-  <PropertyGroup Condition=" '$(TargetFramework)' == 'netcoreapp2.1' ">
-    <DefineConstants>$(DefineConstants);CORECLR</DefineConstants>
-    <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
-    <DebugType>portable</DebugType>
-  </PropertyGroup>
-
  <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
-    <DefineConstants>$(DefineConstants);CORECLR;COREv1</DefineConstants>
+    <DefineConstants>$(DefineConstants);CORECLR</DefineConstants>
     <DebugType>portable</DebugType>
   </PropertyGroup>
 
-  <ItemGroup Condition=" ('$(TargetFramework)' == 'netcoreapp2.1') Or ('$(TargetFramework)' == 'netstandard2.0') ">
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0')">
     <Compile Remove="Resources\Messages.Designer.cs" />
     <EmbeddedResource Remove="Resources\Messages.resx" />
-  </ItemGroup>
-  
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp2.1' ">
-    <PackageReference Update="Microsoft.NETCore.App" Version="2.1.6" />
-    <PackageReference Include="Microsoft.Win32.Registry.AccessControl" Version="4.5.0" />
-    <PackageReference Include="NETStandard.Library" Version="2.0.3" />
-    <PackageReference Include="System.IO.FileSystem.AccessControl" Version="4.5.0" />
-    <PackageReference Include="System.Security.AccessControl" Version="4.5.0" />
-    <PackageReference Include="System.Security.Cryptography.Pkcs" Version="4.5.1" />
-    <PackageReference Include="System.Security.Principal.Windows" Version="4.5.1" />
-    <PackageReference Include="System.Text.Encoding.CodePages" Version="4.5.0" />
   </ItemGroup>
 
 </Project>
