--- a/src/Microsoft.PackageManagement.MetaProvider.PowerShell/Microsoft.PackageManagement.MetaProvider.PowerShell.csproj
+++ b/src/Microsoft.PackageManagement.MetaProvider.PowerShell/Microsoft.PackageManagement.MetaProvider.PowerShell.csproj
@@ -60,7 +60,7 @@
     <DebugType>portable</DebugType>
   </PropertyGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0')">
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <Compile Remove="Resources\Messages.Designer.cs" />
     <EmbeddedResource Remove="Resources\Messages.resx" />
   </ItemGroup>
