--- a/src/Microsoft.PackageManagement/Microsoft.PackageManagement.csproj
+++ b/src/Microsoft.PackageManagement/Microsoft.PackageManagement.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net451;;netsandard2.0</TargetFrameworks>
+    <TargetFrameworks>net451;netsandard2.0</TargetFrameworks>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <DelaySign>true</DelaySign>
     <AssemblyName>Microsoft.PackageManagement</AssemblyName>
