use 6.2.0-preview.3 for coreclr testing

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ os:
   - WMF 5
 environment:
   matrix:
-    - test_framework: fullclr
+    # - test_framework: fullclr
     - test_framework: coreclr
 configuration: Release
 platform: Any CPU
